objects/ssot__ProviderActivityGoal__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityAttainmentPercentage__c</fullName>
        <label>Activity Attainment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityPlanId__c</fullName>
        <label>Activity Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActlNonProdtActvtyCapValueNumber__c</fullName>
        <label>Actual Non Prodt Level Actvty Capped Val</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualActivityCappedValueNumber__c</fullName>
        <label>Actual Activity Capped Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualNonProdtActvtyValueNumber__c</fullName>
        <label>Actual Non Product Level Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualProdtActvtyCapValueNumber__c</fullName>
        <label>Actual Prodt Level Activity Capped Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualProductActivityValueNumber__c</fullName>
        <label>Actual Product Level Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActvtyAttainmentCappedPct__c</fullName>
        <label>Activity Attainment Capped Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssigneeChangeReasonText__c</fullName>
        <label>Assignee Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Activity Plan Goal Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NonProdtActvtyProratedValueNumber__c</fullName>
        <label>Non Prodt Level Activity Prorated Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NonProdtAttainmentCapPct__c</fullName>
        <label>Non Prodt Actvty Attainment Capped Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NonProductAttainmentPct__c</fullName>
        <label>Non Prodt Level Activity Attainment Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NonProductGoalNumber__c</fullName>
        <label>Non Product Level Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OverallGoalNumber__c</fullName>
        <label>Overall Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProdtActvtyAttainmentPct__c</fullName>
        <label>Product Level Activity Attainment Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductActivityAtmtCapPct__c</fullName>
        <label>Product Level Actvty Attainment Cap Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductActvtyProratedValueNumber__c</fullName>
        <label>Product Level Activity Prorated Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductLevelGoalNumber__c</fullName>
        <label>Product Level Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProratedOverallGoalNumber__c</fullName>
        <label>Prorated Overall Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerChangeReasonText__c</fullName>
        <label>Reviewer Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SchdNonProdtActvtyCapValueNumber__c</fullName>
        <label>Schd Non Prodt Level Actvty Capped Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SchdProdtActvtyCappedValueNumber__c</fullName>
        <label>Scheduled Prodt Level Actvty Cap Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledActvtyCappedValueNumber__c</fullName>
        <label>Scheduled Activity Capped Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledNonProdtActvtyValueNumber__c</fullName>
        <label>Scheduled Non Prodt Level Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalActlActvtyWeightedValueNumber__c</fullName>
        <label>Total Actual Activity Weighted Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalActualActivityValueNumber__c</fullName>
        <label>Total Actual Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProjectedActivityValueNumber__c</fullName>
        <label>Total Projected Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalSchdActvtyWeightedValueNumber__c</fullName>
        <label>Total Scheduled Activity Weighted Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalSchdProdtActvtyValueNumber__c</fullName>
        <label>Total Schd Prodt Level Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalScheduledActivityValueNumber__c</fullName>
        <label>Total Scheduled Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800776145_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderActivityGoal_AccountId_map_A_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ProviderActivityGoal_AccountId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1752800776145_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800789777_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderActivityGoal_ActivityPlanId__rel</label>
        <referenceTo>ssot__ActivityPlan__dlm</referenceTo>
        <relationshipLabel>ProviderActivityGoal_ActivityPlanId__rel</relationshipLabel>
        <relationshipName>rel_1752800789777_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>